# sp1-utreexo

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  ci.sh  comparsion.py  comparsion2.py  extract_from_block.sh  loadtest.py  run-bridge-with-backup.sh  run-end-to-end.py  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
accumulator-service/: Cargo.toml
accumulator-service/src/: api.rs  builder.rs  leaves.rs  lib.rs  pollard.rs  script_utils.rs  state_machine.rs  updater.rs
accumulator-service/tests/: dump_restore.rs  http_state.rs  update_pollard.rs
circuit/: .gitignore  README.md
circuit/acc-data/block-100txs/: acc-before.txt  block.txt  input_leaf_hashes.txt
circuit/acc-data/block-5txs/: acc-before.txt  input_leaf_hashes.txt
circuit/metrics-cycles-new/: 1.json  850.json
circuit/program/utreexo/: .rustfmt.toml  Cargo.toml
circuit/program/utreexo/src/: btc_structs.rs  main.rs  process_block.rs
circuit/script/: Cargo.toml  build.rs  rust-toolchain
elf/: riscv32im-succinct-zkvm-elf
examples/: get_block_inputs.rs  mem_forest_to_pollard.rs
input-generator/: Cargo.toml  README.md
input-generator/benches/: input-generator.rs
input-generator/processed-acc-data/block-4txs/: acc-before.txt  input_leaf_hashes.txt
input-generator/src/: lib.rs  main.rs
rustreexo/: .rustfmt.toml  Cargo.toml
rustreexo/benches/: pollard.rs
rustreexo/src/accumulator/: mod.rs  node_hash.rs  pollard.rs  proof.rs  stump.rs  util.rs
script/: Cargo.toml  build.rs
script/src/: lib.rs  pollard.rs  updater.rs
server/: Cargo.toml
server/acc-datas/block-1txs/: block.txt
server/acc-datas/block-2txs/: acc-after.txt  block.txt
server/acc-datas/block-3txs/: acc-after.txt  input-leaf-hashes.txt
server/acc-datas/block-4txs/: acc-after.txt  acc-beffore.txt  input-leaf-hashes.txt
server/acc-datas/block-5txs/: block.txt  input-leaf-hashes.txt
server/acc-datas/block-6txs/: input-leaf-hashes.txt
server/src/: api.rs  bitcoin_bridge.rs  block_index.rs  blockfile.rs  chainview.rs  cli.rs  db.rs  leaf_cache.rs  main.rs  prover.rs  udata.rs  zk.rs
test-data/block-2txs/: acc-beffore.txt  input-leaf-hashes.txt
test-data/block-3txs/: acc-beffore.txt
test-data/block-5txs/: acc-after.txt  acc-beffore.txt  input-leaf-hashes.txt
test-data/block-6txs/: acc-after.txt  acc-beffore.txt  block.txt  input-leaf-hashes.txt
test-data/block-7txs/: acc-after.txt  acc-beffore.txt  block.txt  input-leaf-hashes.txt
test-data/block-8txs/: acc-after.txt  acc-beffore.txt  block.txt  input-leaf-hashes.txt
test-data/block-9txs/: acc-after.txt  acc-beffore.txt  block.txt  input-leaf-hashes.txt
txoutset/: Cargo.toml
txoutset/examples/csv/: Cargo.toml
txoutset/examples/csv/src/: main.rs
txoutset/src/: lib.rs  script.rs  var_int.rs
utreexo/: .rustfmt.toml  Cargo.toml
utreexo/src/: btc_structs.rs  lib.rs  process_block.rs
verifier-rs/: Cargo.toml
verifier-rs/src/: main.rs
