[package]
name = "rustreexo"
version = "0.3.0"
authors = ["Calvin Kim <calvin@kcalvinalvin.info>"]
edition = "2018"
description = "A Rust implementation of Utreexo"
license = "MIT"
repository = "https://github.com/mit-dci/rustreexo"
readme = "README.md"
homepage = "https://github.com/mit-dci/rustreexo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
serde_with = "1.14"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
bitcoin_hashes = { version = "0.16", features = ["serde"] }

[features]
with-serde = ["serde"]
default = []
