[package]
name = "verifier-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.19"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "459fac7" }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
