[package]
name = "utreexo-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "utreexo"
path = "src/bin/utreexo.rs"

[dependencies]
duckdb = "0.9"
chrono = "=0.4.39"
rustreexo = { version = "0.4", features = ["with-serde"] }
hex = "0.4"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"
num-format = "0.4"

[build-dependencies]
sp1-helper = "4.0.0"
sp1-build = "4.0.0"

[features]
native = []
default = ["native"]
