[package]
version = "0.1.0"
name = "btcx-program-utreexo"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
bitcoin = { git = "https://github.com/KinetexNetwork/rust-bitcoin", branch = "0.32.x", features = ["serde"] }
hex = "0.4.3"
sp1-zkvm = "4.0.0"
rustreexo = { path = "../../../rustreexo", features = ["with-serde"] }
bitcoin_hashes ={ version = "0.14", features = ["serde"] }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
serde = "1.0.210"
bitcoin-io = "0.2.0"
